Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-9078

[C++] Parquet writing of extension type with nested storage type fails

    XMLWordPrintableJSON

Details

    Description

      A reproducer in Python:

      import pyarrow as pa
      import pyarrow.parquet as pq
      
      
      class MyStructType(pa.PyExtensionType): 
       
          def __init__(self): 
              pa.PyExtensionType.__init__(self, pa.struct([('left', pa.int64()), ('right', pa.int64())])) 
       
          def __reduce__(self): 
              return MyStructType, () 
      
      
      struct_array = pa.StructArray.from_arrays(
          [
              pa.array([0, 1], type="int64", from_pandas=True),
              pa.array([1, 2], type="int64", from_pandas=True),
          ],
          names=["left", "right"],
      )
      
      # works
      table = pa.table({'a': struct_array})
      pq.write_table(table, "test_struct.parquet")
      
      # doesn't work
      mystruct_array = pa.ExtensionArray.from_storage(MyStructType(), struct_array)
      table = pa.table({'a': mystruct_array})
      pq.write_table(table, "test_struct.parquet")
      

      Writing the simple StructArray nowadays works (and reading it back in as well).

      But when the struct array is the storage array of an ExtensionType, it fails with the following error:

      ArrowException: Unknown error: data type leaf_count != builder_leaf_count1 2
      

      Attachments

        Issue Links

          Activity

            People

              apitrou Antoine Pitrou
              jorisvandenbossche Joris Van den Bossche
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 3.5h
                  3.5h