ARROW-9078: [C++] Parquet read / write extension type with nested storage type